rsync 2.5.3 (not released yet)

  SECURITY FIXES:

    * Make sure that supplementary groups are removed from a server
      process after changing uid and gid. (Ethan Benson)

  BUG FIXES:

    * Fixed problem that in many cases caused the error message 
	unexpected read size of 0 in map_ptr
      and resulted in the wrong data being copied.

    * Fixed compilation errors on some systems caused by the use of
      "unsigned int64" in rsync.h.

    * Fixed problem on systems such as Sunos4 that do not support realloc
      on a NULL pointer; error was "out of memory in flist_expand".

    * Fix for rsync server processes hanging around after the client
      unexpectedly disconnects.  (Colin Walters) (Debian bug #128632)

  ENHANCEMENTS:

    * Command to initiate connections is only shown with -vv, rather
      than -v as in 2.5.2.  Output from plain -v is more similar to
      what was historically used so as not to break scripts that try
      to parse the output.

    * Added --no-whole-file and --no-blocking-io options (Dave Dykstra)

    * Made the --write-batch and --read-batch options actually work
      and added documentation in the man page (Jos Backus)

    * If the daemon is unable to fork a child to accept a connection,
      print an error message.  (Colin Walters)